--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@ a.article:hover {
         #sidebar {
             position: absolute;
             background:#4FDDB0;
+            top: 60px;
         }
         footer {
             margin-top: 20px;
@@ -291,34 +292,40 @@ a.article:hover {
     <div class="container2">
 
         <nav id="sidebar">
-            <div class="sidebar-header">
+            <!-- <div class="sidebar-header">
                 <h3>Bootstrap Sidebar</h3>
-            </div>
+            </div> -->
 
-            <ul class="list-unstyled components">
-                <p>Dummy Heading</p>
-                <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Home</a>
+            <ul class="list-unstyled">
+
+                <li>
+                    <a href="#">
+                        <p>Tacos For All</p>
+                    </a>
+                    <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Home</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li><a href="#">Home 1</a></li>
                         <li><a href="#">Home 2</a></li>
                         <li><a href="#">Home 3</a></li>
-                    </ul>
+                    </ul> -->
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#">
+                        <p>Hot Dog's</p>
+                    </a>
+                        <!-- <a href="#">About</a>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">Pages</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
                         <li><a href="#">Page 1</a></li>
                         <li><a href="#">Page 2</a></li>
                         <li><a href="#">Page 3</a></li>
-                    </ul>
+                    </ul> -->
                 </li>
                 <li>
-                    <a href="#">Portfolio</a>
+                    <a href="#"><p>Tacos Tacos</p></a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#"><p>Street Tacos</p></a>
                 </li>
             </ul>
         </nav>
