--- a/app/public/index.html
+++ b/app/public/index.html
@@ -260,7 +260,7 @@ a.article:hover {
             background: #4FDDB0;
         }
     </style>
-    <title>Document</title>
+    <title>Munchies</title>
 </head>
 
 <body>
@@ -271,12 +271,12 @@ a.article:hover {
             <img src="assets/images/logomunchcies.png" id="munchies-logo">
         </a>
         <form class="form-inline" id="search-form">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
         <form class="form-inline" id="login-signup">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log In</button>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Up</button>
+            <button class="btn btn-outline-success my-2 mx-1 my-sm-0" type="submit">Log In</button>
+            <button class="btn btn-outline-success my-2 mx-1 my-sm-0" type="submit">Sign Up</button>
         </form>
     </nav>
 
