--- a/app/public/signup.html
+++ b/app/public/signup.html
@@ -59,9 +59,13 @@
                         </div>
                     </div>
                     <button class="btn btn-outline-success btn-block mt-3" type="submit" id="profile">Submit</button>
-                </form>
+                </form>                
             </div>
         </div>
-    </div>    
+    </div>
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="js/signup.js" type="text/javascript"></script>  
+      
 </body>
 </html>
