--- a/app/public/index.html
+++ b/app/public/index.html
@@ -276,7 +276,7 @@ a.article:hover {
         </form>
         <form class="form-inline" id="login-signup">
             <button class="btn btn-outline-success my-2 mx-1 my-sm-0" type="submit">Log In</button>
-            <button class="btn btn-outline-success my-2 mx-1 my-sm-0" type="submit">Sign Up</button>
+            <a href="signup.html" class="btn btn-outline-success my-2 mx-1 my-sm-0" role="button">Sign Up</a>
         </form>
     </nav>
 
