--- a/app/public/index.html
+++ b/app/public/index.html
@@ -302,13 +302,14 @@ a.article:hover {
                 <div class="input-group-append">
                     <button id="loc1" class="btn btn-outline-success border" type="button"><i class="fas fa-map-marker-alt"></i></button>
                 </div>
-                
-                <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
             </div>   
         </form>
         <form class="form-inline" id="login-signup">
-            <button class="btn btn-outline-success my-2 mx-1 my-sm-0" type="submit">Log In</button>
-            <a href="signup.html" class="btn btn-outline-success my-2 mx-1 my-sm-0" role="button">Sign Up</a>
+            <div class="input-group">
+                    <button class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" type="submit">LOG IN</button>
+                    <a href="signup.html" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button">SIGN UP</a>
+            </div>
+           
         </form>
     </nav>
 
