--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
         crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
-    
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
 
 
     <style>
@@ -244,7 +241,6 @@ a.article:hover {
             background:#4FDDB0;
             top: 96px;
             z-index: 4;
-            float: left;
         }
         footer {
             margin-top: 20px;
@@ -280,7 +276,7 @@ a.article:hover {
 
 
     </style>
-    <title>Munchies</title>
+    <title>Document</title>
 </head>
 
 <body>
@@ -292,24 +288,13 @@ a.article:hover {
         <a class="navbar-brand">
             <img src="assets/images/logomunchcies.png" id="munchies-logo">
         </a>
-        <form class="navbar-form w-50" id="search-form">
-            <div class="form-inline input-group">
-                <div class="input-group-prepend">
-                    <div class="input-group-prepend">
-                        <button id="search" class="btn btn-outline-success border border-right-0" type="button"><i class="fas fa-search"></i></button>
-                    </div>
-                </div>
-                <input class="form-control bg-light border border-right-0" type="text" placeholder="Search">
-                <div class="input-group-append">
-                    <button id="loc1" class="btn btn-outline-success border" type="button"><i class="fas fa-map-marker-alt"></i></button>
-                </div>
-            </div>   
+        <form class="form-inline" id="search-form">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         </form>
         <form class="form-inline" id="login-signup">
-            <div class="input-group">
-                    <button class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" type="submit">LOG IN</button>
-                    <a href="signup.html" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button">SIGN UP</a>
-            </div>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log In</button>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Up</button>
         </form>
     </nav>
 
