--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -6,8 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Profile | Munchies</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
 
 </head>
+<style>
+#munchies-logo {
+        height: 55px;
+        width: 120px;
+        width: 140px;
+        height: 40px;
+    }
+
+.navbar {
+  padding: 15px 10px;
+  background: #fff;
+  border: none;
+  border-radius: 0;
+  /* margin-bottom: 40px; */
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  border-bottom: 1px dashed #ddd;
+  margin: 40px 0;
+}
+
+</style>
 <body>
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand">
@@ -30,32 +57,48 @@
 
     <form class="form-inline" id="login-signup">
             <div class="input-group">
-                <a href="./login" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" type="submit">LOG IN</a>
+                <a href="./login" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button">LOG OUT</a>
                 <a href="./signup" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button">SIGN UP</a>
             </div>
         </form>
     </nav>
 
     <div class="container">
-        <div class="row">
+        <div class="row mt-5">
             <div class="col-3">
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
+                    <a class="nav-link active" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
                     <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Menus</a>
                     <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
                 </div>
             </div>
             <div class="col-9">
                 <div class="tab-content" id="v-pills-tabContent">
-                    <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                        <h1>Owner Name: Caleb Kang</h1>
-                        <h3>Business Name: King Taco</h3>
+                    <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                        <div class="jumbotron">
+                            <h1 class="display-4">Hello, <div id="ownerName"></div></h1>
+                            <hr class="my-4">
+                            <h3 class="lead mb-3">Business Name: <div id="businessName"></div></h3>
+                            <div class="alert alert-success">
+                                <div class="custom-control-lg custom-switch">
+                                    <input type="checkbox" class="custom-control-input" id="status">
+                                    <label class="custom-control-label" for="status">ON/OFF</label>
+                                </div>
+                            </div>        
+                        </div>
                     </div>
                     <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-                        <button class="btn btn-outline-success">Add Menu</button>
+                        <div class="jumbotron">
+                            <h1 class="display-4">Menus</h1>
+                            <hr class="my-4">
+                            <button class="btn btn-outline-success">Add Menu</button>     
+                        </div>
                     </div>
                     <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
-
+                        <div class="jumbotron">
+                            <h1 class="display-4">Settings</h1>
+                            <hr class="my-4">
+                        </div>
                     </div>
                 </div>
             </div>
