--- a/app/public/index.html
+++ b/app/public/index.html
@@ -306,7 +306,7 @@ a.article:hover {
         </form>
         <form class="form-inline" id="login-signup">
             <div class="input-group">
-                    <button class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" type="submit">LOG IN</button>
+                    <a href="login.html" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button">LOG IN</a>
                     <a href="signup.html" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button">SIGN UP</a>
             </div>
         </form>
