--- a/app/public/signup.html
+++ b/app/public/signup.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
 </head>
-<body>
+<body>    
+    <div class="text-center">
+        <img class="mb-4" src="assets/images/logomunchcies.png" alt="logo" width="250" height="100">
+    </div>
+    
     <div class="container">
         <div class="row">
             <div class="col-md-12">    
