--- a/app/public/index.html
+++ b/app/public/index.html
@@ -241,7 +241,7 @@ a.article:hover {
         }
         #sidebar {
             position: absolute;
-            background:#4FDDB0;
+            background:#28a745;
             top: 96px;
             z-index: 4;
         }
@@ -287,7 +287,7 @@ a.article:hover {
 
 
     <!-- Image and text -->
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light sticky-top bg-light">
         <a class="navbar-brand">
             <img src="assets/images/logomunchcies.png" id="munchies-logo">
         </a>
@@ -306,7 +306,7 @@ a.article:hover {
         </form>
         <form class="form-inline" id="login-signup">
             <div class="input-group">
-                    <a href="login.html" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button">LOG IN</a>
+                    <a href="login.html" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-tie"></i> LOG IN</a>
                     <a href="signup.html" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button">SIGN UP</a>
             </div>
         </form>
