--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -76,10 +76,10 @@
                 <div class="tab-content" id="v-pills-tabContent">
                     <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                         <div class="jumbotron">
-                            <h1 class="display-4">Hello, <div id="ownerName"></div></h1>
+                            <h1 class="display-5 mb-5">Hello, <div id="ownerName"></div></h1>
+                            <h3 class="lead">Business Name: <div id="businessName"></div></h3>
                             <hr class="my-4">
-                            <h3 class="lead mb-3">Business Name: <div id="businessName"></div></h3>
-                            <div class="alert alert-success">
+                            <div class="alert alert-danger">
                                 <div class="custom-control-lg custom-switch">
                                     <input type="checkbox" class="custom-control-input" id="status">
                                     <label class="custom-control-label" for="status">ON/OFF</label>
@@ -89,14 +89,14 @@
                     </div>
                     <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
                         <div class="jumbotron">
-                            <h1 class="display-4">Menus</h1>
+                            <h1 class="display-5">Menu</h1>
                             <hr class="my-4">
-                            <button class="btn btn-outline-success">Add Menu</button>     
+                            <button class="btn btn-outline-success" id="add" data-toggle="modal" data-target="#menuModal">Add Menu</button>     
                         </div>
                     </div>
                     <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
                         <div class="jumbotron">
-                            <h1 class="display-4">Settings</h1>
+                            <h1 class="display-5">Settings</h1>
                             <hr class="my-4">
                         </div>
                     </div>
@@ -105,10 +105,46 @@
         </div>
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="menuModal" tabindex="-1" role="dialog" aria-labelledby="menuModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <div class="modal-title" id="menuModalLabel">Menu Item
+                    <span class="badge badge-success">NEW</span>
+                </div>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="itemName">Name</label>
+                        <input type="text" class="form-control" id="itemName" placeholder="ex: Dirty Dogs" required>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="itemPrice">Price</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">$</span>
+                            </div>
+                            <input type="text" class="form-control" id="itemPrice">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-success" id="save">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="js/profile.js" type="text/javascript"></script>
 </body>
 </html>
