--- a/app/public/login.html
+++ b/app/public/login.html
@@ -35,7 +35,7 @@
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" name="password" class="form-control" placeholder="Password" required>
         
-        <button class="btn btn-lg btn-success btn-block" type="submit">Sign in</button>
+        <a class="btn btn-lg btn-success btn-block" href="#" role="button">Sign in</a>
         
         <p class="mt-3"><small>Need an account? <a href="signup.html">Create your account here.</a></small></p>
         <p class="mt-5 mb-3 text muted">Munchies &copy; 2019</p>
