--- a/app/public/index.html
+++ b/app/public/index.html
@@ -462,7 +462,7 @@ a.article:hover {
                 $(this).toggleClass("active");
             });
 
-            $("#loc1").on("click", function () {
+            $("#status").on("click", function () {
                 if (navigator.geolocation) {
 
                     navigator.geolocation.getCurrentPosition(function (position) {
