--- a/app/public/login.html
+++ b/app/public/login.html
@@ -35,9 +35,9 @@
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" name="password" class="form-control" placeholder="Password" required>
         
-        <a class="btn btn-lg btn-success btn-block" href="#" role="button">Sign in</a>
+        <button class="btn btn-lg btn-success btn-block" type="submit">Sign in</button>
         
-        <p class="mt-3"><small>Need an account? <a href="signup.html">Create your account here.</a></small></p>
+        <p class="mt-3"><small>Need an account? <a href="./signup">Create your account here.</a></small></p>
         <p class="mt-5 mb-3 text muted">Munchies &copy; 2019</p>
     </form>        
 </body>
