--- a/app/public/index.html
+++ b/app/public/index.html
@@ -282,7 +282,6 @@ a.article:hover {
 </head>
 
 <body>
-    <!-- Image and text -->
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand">
             <img src="assets/images/logomunchcies.png" id="munchies-logo">
@@ -292,8 +291,7 @@ a.article:hover {
             <div class="form-inline input-group">
                 <div class="input-group-prepend">
                     <div class="input-group-prepend">
-                        <button id="search-button" class="btn btn-outline-success border border-right-0" type="button"><i
-                                class="fas fa-search"></i></button>
+                        <button id="search-button" class="btn btn-outline-success border border-right-0" type="button"><i class="fas fa-search"></i></button>
                     </div>
                 </div>
                 <input class="form-control bg-light border border-right-0" type="text" placeholder="Search" id="search-box">
@@ -311,10 +309,9 @@ a.article:hover {
         </form>
     </nav>
 
-    <div class="container">
-        <div id="map" style="overflow: visible !important;">
-        
-        </div>
+    <div id="map" style="overflow: visible !important;"></div>
+
+    <div class="container2">
 
         <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
             <i class="glyphicon glyphicon-align-left"></i>
@@ -322,11 +319,6 @@ a.article:hover {
         </button>
 
         <nav id="sidebar">
-
-            <!-- <div class="sidebar-header">
-                <h3>Bootstrap Sidebar</h3>
-            </div> -->
-
             <ul class="list-unstyled">
                 <li>
                     <a href="#">
@@ -450,12 +442,7 @@ a.article:hover {
     </footer>
     <!-- Footer ends -->
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQHurErpXDh3Y89jvtzzv_O_3tYyoeptI&callback=initMap"
-        type="text/javascript"></script>
-
-    
-
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQHurErpXDh3Y89jvtzzv_O_3tYyoeptI&callback=initMap" type="text/javascript"></script>
     <script src="js/location.js"></script>
 </body>
-
 </html>
