--- a/app/public/index.html
+++ b/app/public/index.html
@@ -284,7 +284,7 @@ a.article:hover {
 <body>
     <!-- Image and text -->
     <nav class="navbar navbar-light sticky-top bg-light">
-        <a class="navbar-brand">
+        <a class="navbar-brand" href="/">
             <img src="assets/images/logomunchcies.png" id="munchies-logo">
         </a>
         
@@ -305,7 +305,7 @@ a.article:hover {
         <form class="form-inline" id="login-signup">
             <div class="input-group">
                 <a href="login.html" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-tie"></i> LOG IN</a>
-                <a href="signup.html" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button">SIGN UP</a>
+                <a href="signup.html" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-plus"></i> SIGN UP</a>
             </div>
         </form>
     </nav>
