--- a/app/public/login.html
+++ b/app/public/login.html
@@ -25,7 +25,7 @@
 </head>
 <body class="text-center">
     <form class="form-signin" method="POST" action="/login">
-        <img class="mb-4" src="assets/images/logomunchcies.png" alt="logo" width="250" height="100">
+        <a href="/"><img class="mb-4" src="assets/images/logomunchcies.png" alt="logo" width="250" height="100"></a>
 
         <h4 class="mb-3 font-weight-normal">Log in to Munchies</h4>
         
