--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -13,33 +13,33 @@
 
 </head>
 <style>
-#munchies-logo {
-        height: 55px;
-        width: 120px;
-        width: 140px;
-        height: 40px;
+    #munchies-logo {
+            height: 55px;
+            width: 120px;
+            width: 140px;
+            height: 40px;
+        }
+
+    .navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    /* margin-bottom: 40px; */
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     }
 
-.navbar {
-  padding: 15px 10px;
-  background: #fff;
-  border: none;
-  border-radius: 0;
-  /* margin-bottom: 40px; */
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.line {
-  width: 100%;
-  height: 1px;
-  border-bottom: 1px dashed #ddd;
-  margin: 40px 0;
-}
+    .line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+    }
 
 </style>
 <body>
     <nav class="navbar navbar-light bg-light sticky-top">
-        <a class="navbar-brand">
+        <a class="navbar-brand" href="/">
             <img src="assets/images/logomunchcies.png" id="munchies-logo">
         </a>
 
