--- a/app/public/index.html
+++ b/app/public/index.html
@@ -304,8 +304,8 @@ a.article:hover {
 
         <form class="form-inline" id="login-signup">
             <div class="input-group">
-                <a href="login.html" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-tie"></i> LOG IN</a>
-                <a href="signup.html" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-plus"></i> SIGN UP</a>
+                <a href="./login" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-tie"></i> LOG IN</a>
+                <a href="./signup" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-plus"></i> SIGN UP</a>
             </div>
         </form>
     </nav>
@@ -373,7 +373,7 @@ a.article:hover {
             <div class="row">
 
                 <!-- Grid column -->
-                <div class="col-md-6 mt-md-0 mt-3">
+                <div class="col-md-4 mt-md-0">
 
                     <!-- Content -->
                     <h5 class="text-uppercase">Footer Content</h5>
@@ -385,7 +385,7 @@ a.article:hover {
                 <hr class="clearfix w-100 d-md-none pb-3">
 
                 <!-- Grid column -->
-                <div class="col-md-3 mb-md-0 mb-3">
+                <div class="col-md-4 mb-md-0 text-center">
 
                     <!-- Links -->
                     <h5 class="text-uppercase">MUNCHIES</h5>
@@ -397,24 +397,10 @@ a.article:hover {
                     </ul>
 
                 </div>
+                
                 <!-- Grid column -->
 
-                <!-- Grid column -->
-                <div class="col-md-3 mb-md-0 mb-3">
-
-                    <!-- Links -->
-                    <h5 class="text-uppercase">Customer Care</h5>
-
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#!">Contact Us</a>
-                        </li>
-                    </ul>
-
-                </div>
-                <!-- Grid column -->
-
-                <div class="col-md-3 mb-md-0 mb-3">
+                <div class="col-md-4 mb-md-0 text-right">
 
                     <!-- Links -->
                     <h5 class="text-uppercase">Customer Care</h5>
@@ -430,16 +416,9 @@ a.article:hover {
 
             </div>
             <!-- Grid row -->
-
-        </div>
-        <!-- Footer Links -->
-
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2019 Copyright:
-            <a href="https://mdbootstrap.com/education/bootstrap/"> MUNCHIES</a>
         </div>
         <!-- Copyright -->
-
+        <div class="mt-5 mb-3 text muted text-center"><a href="/">Munchies</a> &copy; 2019</div>
     </footer>
     <!-- Footer ends -->
 
