--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -78,10 +78,10 @@
                 <div class="tab-content" id="v-pills-tabContent">
                     <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                         <div class="jumbotron border border-success">
-                            <h1 class="display-5 alert alert-success">Hello, <div id="ownerName"></div></h1>
-                            <h3 class="lead alert alert-success">Business Name: <div id="businessName"></div></h3>
+                            <h1 id="greeting" class="display-5 alert alert-success">
+                            <h3 id="business" class="lead alert alert-success">Business Name: <div id="businessName"></div></h3>
                             <hr class="my-4">
-                            <button class="btn btn-outline-success" id="status">Share your location</button>
+                            <button class="btn btn-outline-success" id="status">Go Live</button>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
