--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -81,13 +81,26 @@
                             <h1 id="greeting" class="display-5 alert alert-success">
                             <h3 id="business" class="lead alert alert-success">Business Name: <div id="businessName"></div></h3>
                             <hr class="my-4">
-                            <button class="btn btn-outline-success" id="status">Go Live</button>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h3 class="lead alert alert-success">STATUS:</h3> 
+                                </div>
+                                <div class="col-md-6 text-right">
+                                    <button class="btn btn-outline-danger mr-1" id="online">Live</button>
+                                    <button class="btn btn-outline-dark" id="offline">Offline</button>
+                                </div>
+                            </div>
+                            
                         </div>
                     </div>
                     <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
                         <div class="jumbotron border border-success">
                             <h1 class="display-5 alert alert-success">Menu</h1>
                             <hr class="my-4">
+                            <div class="row">
+                                <div class="col-md-6" id="MenuItem"></div>
+                                <div class="col-md-6" id="MenuPrice"></div>
+                            </div>
                             <div class="text-right">
                                 <button class="btn btn-outline-success" id="add" data-toggle="modal" data-target="#menuModal">Add Menu</button>     
 
