--- a/app/public/index.html
+++ b/app/public/index.html
@@ -304,8 +304,8 @@ a.article:hover {
 
         <form class="form-inline" id="login-signup">
             <div class="input-group">
-                <a href="./login" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-tie"></i> LOG IN</a>
-                <a href="./signup" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-plus"></i> SIGN UP</a>
+                <a href="/login" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-tie"></i> LOG IN</a>
+                <a href="/signup" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-plus"></i> SIGN UP</a>
             </div>
         </form>
     </nav>
