include menu to vendor

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -410,6 +410,7 @@ a.article:hover {
     <!-- Footer ends -->
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQHurErpXDh3Y89jvtzzv_O_3tYyoeptI&callback=initMap" type="text/javascript"></script>
-    <script src="js/location.js"></script>
+    <script src="js/location.js" type="text/javascript"></script>
+    <script src="js/search.js" type="text/javascript"></script>
 </body>
 </html>
