--- a/public/profile.html
+++ b/public/profile.html
@@ -59,7 +59,7 @@
                             <hr class="my-4">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <h3 class="lead alert alert-success">STATUS:</h3> 
+                                    <h3>Status:</h3> 
                                 </div>
                                 <div class="col-md-6 text-right">
                                     <button class="btn btn-outline-danger mr-1" id="online">Live</button>
@@ -135,6 +135,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="js/profile.js" type="text/javascript"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQHurErpXDh3Y89jvtzzv_O_3tYyoeptI&callback=initMap" type="text/javascript"></script>
 </body>
 </html>
