--- a/public/profile.html
+++ b/public/profile.html
@@ -53,7 +53,7 @@
             <div class="col-9">
                 <div class="tab-content" id="v-pills-tabContent">
                     <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                        <div class="jumbotron border border-success">
+                        <div class="jumbotron">
                             <h1 id="greeting" class="display-5 alert alert-success">
                             <h3 id="business" class="lead alert alert-success">Business Name: <div id="businessName"></div></h3>
                             <hr class="my-4">
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-                        <div class="jumbotron border border-success">
+                        <div class="jumbotron">
                             <h1 class="display-5 alert alert-success">Menu</h1>
                             <hr class="my-4">
                             <div class="row">
@@ -78,13 +78,12 @@
                                 <div class="col-md-6" id="MenuPrice"></div>
                             </div>
                             <div class="text-right">
-                                <button class="btn btn-outline-success" id="add" data-toggle="modal" data-target="#menuModal">Add Menu</button>     
-
+                                <button class="btn btn-outline-success" id="add" data-toggle="modal" data-target="#menuModal">Add Menu</button>
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
-                        <div class="jumbotron border border-success">
+                        <div class="jumbotron">
                             <h1 class="display-5 alert alert-success">Settings</h1>
                             <hr class="my-4">
                         </div>
