--- a/public/profile.html
+++ b/public/profile.html
@@ -55,7 +55,7 @@
                     <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                         <div class="jumbotron">
                             <h1 id="greeting" class="display-5 alert alert-success">
-                            <h3 id="business" class="lead alert alert-success">Business Name: <div id="businessName"></div></h3>
+                            <h3 id="business" class="lead alert alert-info">Business Name: <div id="businessName"></div></h3>
                             <hr class="my-4">
                             <div class="row">
                                 <div class="col-md-6">
@@ -74,8 +74,7 @@
                             <h1 class="display-5 alert alert-success">Menu</h1>
                             <hr class="my-4">
                             <div class="row">
-                                <div class="col-md-6" id="MenuItem"></div>
-                                <div class="col-md-6" id="MenuPrice"></div>
+                                <p id="menuDisplay"></p>
                             </div>
                             <div class="text-right">
                                 <button class="btn btn-outline-success" id="add" data-toggle="modal" data-target="#menuModal">Add Menu</button>
