add link to homepage

--- a/public/contact2.html
+++ b/public/contact2.html
@@ -21,9 +21,10 @@
     }
 </style>
 <div class="header">
-        
-        <p>Meet The Team</p>
-      </div>
+    Meet <a href="/"><img class="mb-4" src="assets/images/logomunchcies.png" alt="logo" width="150" height="80"></a> Team
+
+</div>
+
 <body>
     <div class="container">
         <div class="row">
