--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
         <form class="form-inline" id="login-signup">
             <div class="input-group">
-                <a href="/contact" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button">CONTACT</a>
+                <a href="/contact" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fab fa-meetup"></i> CONTACT</a>
                 <a href="/login" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-tie"></i> LOG IN</a>
                 <a href="/signup" class="btn btn-outline-success border-0 my-2 mx-1 my-sm-0" role="button"><i class="fas fa-user-plus"></i> SIGN UP</a>
             </div>
