--- a/public/profile.html
+++ b/public/profile.html
@@ -85,6 +85,7 @@
                         <div class="jumbotron">
                             <h1 class="display-5 alert alert-success">Settings</h1>
                             <hr class="my-4">
+                            <button class="btn btn-outline-danger" id="delete">Delete Account</button>
                         </div>
                     </div>
                 </div>
