--- a/public/profile.html
+++ b/public/profile.html
@@ -74,7 +74,9 @@
                             <h1 class="display-5 alert alert-success">Menu</h1>
                             <hr class="my-4">
                             <div class="row">
-                                <p id="menuDisplay"></p>
+                                <div class="col-md-12">
+                                    <div class="card-deck" id="displayMenu"></div>
+                                </div>
                             </div>
                             <div class="text-right">
                                 <button class="btn btn-outline-success" id="add" data-toggle="modal" data-target="#menuModal">Add Menu</button>
@@ -123,7 +125,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close">Close</button>
               <button type="button" class="btn btn-success" id="save">Save changes</button>
             </div>
           </div>
